syntax = "proto2";

package ei;

message BasicRequestInfo {
    optional string ei_user_id = 1;
    optional uint32 client_version = 2;
    optional string version = 3;
    optional string build = 4;
    optional string platform = 5;
    optional string country = 6;
    optional string language = 7;
    optional bool debug = 8;
}

message AuthenticatedMessage {
    optional bytes message = 1;
    optional uint32 version = 3;
    optional string code = 2;
    optional bool compressed = 4;
    optional uint32 original_size = 5;
    optional string user_id = 6;
}

enum Platform {
    UNKNOWN_PLATFORM = 0;
    IOS = 1;
    DROID = 2;
}

message EggIncFirstContactRequest {
    optional BasicRequestInfo rinfo = 8;
    optional string ei_user_id = 4;
    optional string user_id = 1;
    optional string game_services_id = 7;
    optional string device_id = 5;
    optional string username = 6;
    optional uint32 client_version = 2;
    optional Platform platform = 3;
}

message EggIncFirstContactResponse {
    optional string ei_user_id = 2;
    repeated string ids_transferred = 3;
    optional uint32 error_code = 4 [default = 0];
    optional string error_message = 5;
    optional Backup backup = 1;
    
    enum ErrorCodes {
        NO_ERROR = 0;
        EXISTING_USER_W_GAMER_ID = 1;
        USER_NOT_FOUND = 2;
        BACKUP_CONFLICT = 3;
    }
}

message MissionInfo {
    optional Spaceship ship = 1;
    enum Spaceship {
        CHICKEN_ONE = 0;
        CHICKEN_NINE = 1;
        CHICKEN_HEAVY = 2;
        BCR = 3;
        MILLENIUM_CHICKEN = 4;
        CORELLIHEN_CORVETTE = 5;
        GALEGGTICA = 6;
        CHICKFIANT = 7;
        VOYEGGER = 8;
        HENERPRISE = 9;
        ATREGGIES = 10;
    }
    
    optional DurationType duration_type = 3;
    enum DurationType {
        SHORT = 0;
        LONG = 1;
        EPIC = 2;
        TUTORIAL = 3;
    }
    
    optional uint32 level = 12;
    optional bytes identifier = 7;
}

message ArtifactSpec {
    optional Name name = 1;
    enum Name {
        LUNAR_TOTEM = 0;
        NEODYMIUM_MEDALLION = 3;
        BEAK_OF_MIDAS = 4;
        LIGHT_OF_EGGENDIL = 5;
        DEMETERS_NECKLACE = 6;
        VIAL_MARTIAN_DUST = 7;
        ORNATE_GUSSET = 8;
        THE_CHALICE = 9;
        BOOK_OF_BASAN = 10;
        PHOENIX_FEATHER = 11;
        TUNGSTEN_ANKH = 12;
        AURELIAN_BROOCH = 21;
        CARVED_RAINSTICK = 22;
        PUZZLE_CUBE = 23;
        QUANTUM_METRONOME = 24;
        SHIP_IN_A_BOTTLE = 25;
        TACHYON_DEFLECTOR = 26;
        INTERSTELLAR_COMPASS = 27;
        DILITHIUM_MONOCLE = 28;
        TITANIUM_ACTUATOR = 29;
        MERCURYS_LENS = 30;
        TACHYON_STONE = 1;
        DILITHIUM_STONE = 31;
        SHELL_STONE = 32;
        LUNAR_STONE = 33;
        SOUL_STONE = 34;
        PROPHECY_STONE = 39;
        QUANTUM_STONE = 36;
        TERRA_STONE = 37;
        LIFE_STONE = 38;
        CLARITY_STONE = 40;
        EXTRATERRESTRIAL_ALUMINUM = 13;
        ANCIENT_TUNGSTEN = 14;
        SPACE_ROCKS = 15;
        ALIEN_WOOD = 16;
        GOLD_METEORITE = 17;
        TAU_CETI_GEODE = 18;
        CENTAURIAN_STEEL = 19;
        ERIDANI_FEATHER = 20;
        DRONE_PARTS = 35;
        CELESTIAL_BRONZE = 41;
        LALANDE_HIDE = 42;
        SOLAR_TITANIUM = 43;
        TACHYON_STONE_FRAGMENT = 2;
        DILITHIUM_STONE_FRAGMENT = 44;
        SHELL_STONE_FRAGMENT = 45;
        LUNAR_STONE_FRAGMENT = 46;
        SOUL_STONE_FRAGMENT = 47;
        PROPHECY_STONE_FRAGMENT = 48;
        QUANTUM_STONE_FRAGMENT = 49;
        TERRA_STONE_FRAGMENT = 50;
        LIFE_STONE_FRAGMENT = 51;
        CLARITY_STONE_FRAGMENT = 52;
        UNKNOWN = 10000;
    }
    
    optional Level level = 2;
    enum Level {
        INFERIOR = 0;
        LESSER = 1;
        NORMAL = 2;
        GREATER = 3;
        SUPERIOR = 4;
    }
    
    optional Rarity rarity = 3;
    enum Rarity {
        COMMON = 0;
        RARE = 1;
        EPIC = 2;
        LEGENDARY = 3;
    }
    
    enum Type {
        ARTIFACT = 0;
        STONE = 1;
        INGREDIENT = 2;
        STONE_INGREDIENT = 3;
    }
}

message CompleteArtifact {
    optional ArtifactSpec spec = 1;
    repeated ArtifactSpec stones = 2;
}

message ArtifactInventoryItem {
    optional uint64 item_id = 1;
    optional CompleteArtifact artifact = 2;
    optional double quantity = 3;
    optional string server_id = 4;
}

message ArtifactsDB {
    repeated ArtifactInventoryItem inventory_items = 1;
   
    optional MissionInfo fueling_mission = 14;
    repeated MissionInfo mission_infos = 4;
    repeated MissionInfo mission_archive = 5;
}

message Backup {
    optional string ei_user_id = 18;
    
    optional ArtifactsDB artifacts_db = 15;
}